# emendator

./: .env.example  .fallowrc.jsonc  .gitattributes  .gitignore  .jscpd.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  PROJECT.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  repo-setup.md
backend/: .env.example  README.md  pyproject.toml  run_sidecar.py
backend/app/: __init__.py  config.py  credentials.py  main.py  models.py  profile.py  version.py
backend/app/analyzer/: __init__.py  detectors.py  mixin_targets.py  mods.py  packs.py  registry_index.py
backend/app/analyzer/metadata/: __init__.py  fabric.py  forge.py  quilt.py
backend/app/enrich/: __init__.py  cache.py  curseforge.py  install.py  modrinth.py
backend/app/resolve/: __init__.py  apply.py  generate.py  variants.py
backend/app/runner/: __init__.py  bisect.py  classify.py  runner.py
backend/app/sources/: discovery.py  instance.py
backend/tests/: conftest.py  test_apply.py  test_bisect.py  test_classify.py  test_config.py  test_content_pack.py  test_detectors.py  test_discovery.py  test_enrich.py  test_health.py  test_install.py  test_instance.py  test_metadata_loaders.py  test_mods.py  test_packs.py  test_registry_index.py  test_resolve.py  test_runner.py  test_subject_keys.py  test_version.py
docker/: Dockerfile.offline  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/icons/: emendator.aseprite  icon.icns
src-tauri/src/: lib.rs
(+26 files in other folders)
