[project]
name = "emendator-backend"
version = "0.1.0"
description = "Local FastAPI sidecar for Emendator (drives parsing + Docker runner)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "pyright>=1.1.390",
    "ruff>=0.8",
]

# Application, not a distributable package: skip building/installing our own code.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
